--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="main__boxlivros">
             <div class="main__boxlivros--card" >
                 <div class="main__boxlivros--title" >
-                    <img src="img/arte_de_ler_mente.png" alt="vai ter a imagem do livro">
+                    <img src="img/a-arte-de-ler-mente.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>A arte de ler mentes</h1>
                         <p>É um excelente livro</p>
@@ -68,7 +68,7 @@
             </div>
             <div class="main__boxlivros--card">
                 <div class="main__boxlivros--title" >
-                    <img src="img/milagre-do-amanã.png" alt="vai ter a imagem do livro">
+                    <img src="img/milagred-do-amanha.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>O Milagre do amanhã</h1>
                         <p>É um excelente livro</p>
@@ -82,7 +82,7 @@
             </div>
             <div class="main__boxlivros--card" >
                 <div class="main__boxlivros--title">
-                    <img src="img/quempensa-enriquece.png" alt="vai ter a imagem do livro">
+                    <img src="img/quem-pensar-enriquece.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Quem pensar enriquece</h1>
                         <p>É um excelente livro</p>
