--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
     <link rel="stylesheet" href="css/carrinhomodal.css">
     <title>Projeto livro</title>
@@ -29,7 +33,7 @@
                     <img src="img/a-arte-de-ler-mente.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>A arte de ler mentes</h1>
-                        <p>É um excelente livro</p>
+                        <p>Oferece técnicas para entender melhor as pessoas através da comunicação não verbal e linguagem corporal.</p>
                         <p>$50</p>
                     </div>
                 </div>
@@ -43,7 +47,7 @@
                     <img src="img/poder-do-habito.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>O poder do hábito</h1>
-                        <p>É um excelente livro</p>
+                        <p> Este livro analisa como os hábitos moldam nossas vidas e como podemos alterá-los para alcançar nossos objetivos.</p>
                         <p>$40</p>
                     </div>
                 </div>
@@ -57,7 +61,7 @@
                     <img src="img/maisespertoqueodiabo.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Mais sperto que o capirotinho</h1>
-                        <p>É um excelente livro</p>
+                        <p>Um livro que explora como resistir às tentações e alcançar o sucesso, apresentando uma entrevista fictícia com o próprio diabo.</p>
                         <p>$30</p>
                     </div>
                 </div>
@@ -71,7 +75,7 @@
                     <img src="img/milagred-do-amanha.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>O Milagre do amanhã</h1>
-                        <p>É um excelente livro</p>
+                        <p> Um guia sobre a importância das rotinas matinais para impulsionar o crescimento pessoal e a produtividade.</p>
                         <p>$80</p>
                     </div>
                 </div>
@@ -85,7 +89,7 @@
                     <img src="img/quem-pensar-enriquece.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Quem pensar enriquece</h1>
-                        <p>É um excelente livro</p>
+                        <p>Baseado nos ensinamentos de Napoleon Hill, este livro destaca a importância do pensamento positivo e da ação para alcançar o sucesso financeiro.</p>
                         <p>$20</p>
                     </div>
                 </div>
@@ -99,7 +103,7 @@
                     <img src="img/os segredos da mente mili.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Os segredos da mente milionaria</h1>
-                        <p>É um excelente livro</p>
+                        <p>Revela como adotar a mentalidade dos milionários para alcançar o sucesso financeiro e pessoal.</p>
                         <p>$35</p>
                     </div>
                 </div>
@@ -113,7 +117,7 @@
                     <img src="img/turmadamonica.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Turma da monica</h1>
-                        <p>É um excelente livro</p>
+                        <p>As aventuras e lições de vida dos queridos personagens da Turma da Mônica, ensinando valores como amizade e respeito.</p>
                         <p>$55</p>
                     </div>
                 </div>
@@ -127,7 +131,7 @@
                     <img src="img/pairicopaipobre.png" alt="vai ter a imagem do livro">
                     <div class="main__boxlivros--precodescri">
                         <h1>Pai rico pai pobre</h1>
-                        <p>É um excelente livro</p>
+                        <p>Um livro que contrasta as mentalidades financeiras de diferentes pais, oferecendo lições sobre finanças pessoais e investimentos.</p>
                         <p>$70</p>
                     </div>
                 </div>
